# pysilicon

./: .gitignore  CLAUDE.md  _config.yml  headless_output.txt  pyproject.toml
.github/workflows/: claude.yml
docs/: index.md
docs/examples/: index.md
docs/guide/: index.md
docs/overview/: aiharness.md  flow.md  index.md  motivation.md  pymodel.md  salsa.md  status.md
examples/conv2d/: conv2d_demo.py  timing_analysis.py
examples/histogram/: hist_demo.py
examples/increment/: CODEGEN_NOTES.md  incr.py  incr_build.py  run.tcl
examples/interface/: aximm_demo.py  aximm_queue_demo.py  regmap_demo.py  schema_transfer_demo.py
examples/memory/: mem_demo.py
examples/poly/: poly.cpp  poly.hpp  poly.py  poly_build.py  poly_demo.py  poly_demo_simpy.py  poly_evaluate_impl.tpp  poly_tb.cpp  run.tcl  timing_analysis.py  view_timing.ipynb
examples/regmap/: simp_fun.py  simp_fun_build.py
examples/regmap_simp_fun/: README.md  simp_fun_build.py  simp_fun_compute_impl.cpp  timing_diagram.py
examples/shared_mem/: CODEGEN_NOTES.md  hist.py  hist_build.py  hist_compute_impl.cpp  hist_csim_tb.cpp  hist_demo.py  hist_respond_impl.tpp  hist_validate_impl.cpp  run.tcl  run_gen.tcl  shared_mem_build.py  shared_mem_figures.py
examples/vmac/: .gitignore  golden.py  param_schema.py  vmac.py  vmac_build.py  vmac_cmd.py  vmac_compute_impl.tpp  vmac_utils.h
plans/: aximm_codegen.md  aximm_queue.md  build_dag_plan.md  build_dag_prompt.md  build_plan.md  complexfield_phase0_reference.md  dag_prompt.md  dataschema_plan.md  doc_plan.md  example_rename.md  histogram_codegen.md  hw_component_plan.md  hwcomponent_poly_inspect_plan.md  memory_plan.md  poly_regmap_migration.md  reg_map_plan.md  vitis_regmap_simp_fun_plan.md
pysilicon/hw/: __init__.py  arrayutils.py  aximm.py  aximm_queue.py  clock.py  component.py  dataschema.py  dataunion.py  fixpoint.py  hw_component.py  hw_testbench.py  hwstmt.py  interface.py  memif.py  memory.py  regmap.py  schema_transfer_interface.py  synth.py
pysilicon/scripts/: xsim_vcd.py
pysilicon/simulation/: logger.py  simobj.py
pysilicon/utils/: cosimparse.py
test_workspace/: conv1d.py
tests/examples/: test_aximm_queue_demo.py  test_complex_conformance.py  test_complex_kernels.py  test_fixedpoint_conformance.py  (+13 more)
(+134 files in other folders)
