[project]
name = "pysilicon"
version = "0.1.0"
description = "A Python-first hardware modeling and synthesis framework"
authors = [
    { name = "Sundeep Rangan" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "numpy>=1.24",
    "simpy>=4.1",
    "mcp[cli]>=1.0",
    "openai>=1.0",
]

# Optional developer dependencies
[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "mypy",
]

[project.scripts]
create_doc_assets = "pysilicon.scripts.create_doc_assets:main"
xsim_vcd = "pysilicon.scripts.xsim_vcd:main"
collect_overlay = "pysilicon.scripts.collect_overlay:main"
sv_sim = "pysilicon.scripts.sv_sim:main"
sv_synth = "pysilicon.scripts.sv_build:run_synth"
sv_impl  = "pysilicon.scripts.sv_build:run_impl"
build_lab_autograder = "pysilicon.scripts.build_lab_autograder:main"
pysilicon_mcp_setup = "pysilicon.scripts.pysilicon_mcp_setup:main"
pysilicon_mcp_server = "pysilicon.mcp.server:main"
build_corpus = "pysilicon.mcp.build_corpus:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# Automatically find the pysilicon package and scripts
[tool.setuptools.packages.find]
include = ["pysilicon*", "scripts*"]

# Include non-Python files (schemas, templates, docs assets)
[tool.setuptools]
include-package-data = true

# Pytest configuration
[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
testpaths = ["tests"]
norecursedirs = [".git", ".hg", ".mypy_cache", ".nox", ".tox", ".venv", "venv", "dist", "node_modules", "{arch}"]
markers = [
    "vitis: marks tests as requiring Vitis HLS installation (slow integration tests)",
    "phase1: HwComponent codegen phase 14 — phase 1 (HwTestbench + extractor mode)",
    "phase2: HwComponent codegen phase 14 — phase 2 (HlsCodegenStep.is_testbench)",
    "phase3: HwComponent codegen phase 14 — phase 3 (DUT binding + dut.run)",
    "phase4: HwComponent codegen phase 14 — phase 4 (push/pop + file IO + tbutils)",
    "phase5: HwComponent codegen phase 14 — phase 5 (FunctionalVerifyStep)",
    "phase6: HwComponent codegen phase 14 — phase 6 (poly wiring + integration)",
]
